@@ -1,6 +1,7 @@
 libmeegotouch (0.20.45~1) unstable; urgency=low
 
   * unreleased
+  * Fixes: NB#191954 -  Valgrind - Memory leak in mmashupcanvasview, mextensionareaview.cpp
 
  -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Thu, 23 Sep 2010 14:35:00 +0300
 
